# swarm-patrol

./: .gitignore  .gitmodules  README.md  README_en.md  build-everything.sh  buildAll.md  cslam.repos  diary.md  howto.md
src/anomaly_detection/: anomaly_detection_node.py
src/darp/: CMakeLists.txt  darp_bridge_node.py  darp_node.py  package.xml
src/darp/srv/: WakeUp.srv
src/darp_areas/: CMakeLists.txt  darp_bridge_node.py  darp_bridge_node_old.py  package.xml
src/darp_areas/msg/: WakeUp.msg
src/darp_areas/srv/: WakeUp.srv
src/detector/: CMakeLists.txt  anomaly_detection_node.py  package.xml
src/detector/msg/: AnomalyDetected.msg
src/diff_drive_robot/config/: gz_bridge.yaml  gz_bridge.yaml.in
src/diff_drive_robot/launch/: robot.launch.py
src/diff_drive_robot/rviz/: bot.rviz
src/diff_drive_robot/urdf/: robot.gazebo  robot.gazebo.xacro  robot.urdf  robot.xacro
src/diff_drive_robot/worlds/: corridor.world  double_square_gap.world  office.world  pillars.world  two_rooms.world  world_pillar_forest.world
src/frontier_exploration/: CMakeLists.txt  package.xml
src/frontier_exploration/frontier_exploration/: coordinator.py  exploration_node.py  frontier_finder.py
src/heartbeat_checker/: CMakeLists.txt  heartbeat_checker_node.py  package.xml
src/heartbeat_checker/msg/: LostRobots.msg
src/nav_darp/: CMakeLists.txt  darp_path_follower.py  odom_to_map.py  package.xml  realtime_pointcloud.py  static_tf_publisher.py
src/nav_darp/behavior_trees/: follow_path.xml  navigate_to_pose.xml
src/nav_darp/config/: nav2_params.yaml  nav2_params_r0.yaml  nav2_params_r1.yaml  nav2_params_r2.yaml
src/nav_darp/launch/: robot_nav.launch.py
