<?xml version="1.0"?>
<package format="3">
  <name>anomaly_detection</name>
  <version>0.0.1</version>
  <description>ROS2 anomaly detection node for comparing lidar pointclouds against DARP occupancy grids.</description>

  <maintainer email="me@example.com">me</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>cslam_common_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
