<?xml version="1.0"?>
<package format="3">
  <name>heartbeat_checker</name>
  <version>0.0.1</version>
  <description>ROS2 heartbeat checker node for multi-robot systems.</description>

  <maintainer email="me@example.com">me</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ament_index_python</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>darp_areas</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
